feat: admin bot, booking lifecycle refactor and liquibase migrations
- add admin bot and admin chat support
- introduce booking status enum and end_time logic
- improve booking cancellation and auto-completion
- add feedback and rating flow
- extend barbershop entity with admin fields
- add liquibase migrations and booking indexes