@@ -10,9 +10,10 @@ import java.util.List;
 import java.util.Optional;
 
 /**
- * Сервис для работы с сущностью Client.
- * Отвечает за создание новых клиентов и обновление существующих,
- * а также поиск клиента по Telegram ID.
+ * Сервис для управления профилями клиентов.
+ * <p>
+ * Обеспечивает регистрацию новых пользователей, актуализацию их контактных данных
+ * и отслеживание контекста посещений (последний использованный филиал).
  */
 @Service
 @Slf4j
@@ -21,58 +22,37 @@ public class ClientService {
     private final ClientRepository clientRepository;
 
     /**
-     * Создает нового клиента или возвращает существующего по номеру телефона.
-     * Если клиент уже есть, обновляет отсутствующие данные: полное имя, email, telegramId.
+     * Создает или обновляет профиль клиента на основе предоставленных данных.
+     * <p>
+     * Реализует логику "склейки" аккаунтов: если клиент найден по Telegram ID или телефону,
+     * его профиль дополняется новыми данными (имя, email).
      *
-     * @param phone      номер телефона клиента (используется как уникальный идентификатор)
-     * @param telegramId ID Telegram пользователя (может быть null)
-     * @param fullName   полное имя клиента (может быть null)
-     * @param email      email клиента (может быть null)
-     * @return сохраненный или найденный клиент
+     * @param phone      номер телефона (основной идентификатор в CRM).
+     * @param telegramId уникальный ID пользователя в Telegram.
+     * @param fullName   имя и фамилия.
+     * @param email      адрес электронной почты.
+     * @return актуальный объект {@link Client}.
      */
     public Client saveOrGetClient(String phone, Long telegramId, String fullName, String email) {
-        // Проверяем по telegram_id сначала
+        // Шаг 1: Поиск по Telegram ID
         Optional<Client> existingByTelegramId = findByTelegramId(telegramId);
         if (existingByTelegramId.isPresent()) {
             Client existing = existingByTelegramId.get();
-            // Обновляем данные, если нужно
-            boolean updated = false;
-            if (fullName != null && !fullName.isEmpty() && (existing.getFullName() == null || !existing.getFullName().equals(fullName))) {
-                existing.setFullName(fullName);
-                updated = true;
-            }
-            if (phone != null && !phone.isEmpty() && (existing.getPhone() == null || !existing.getPhone().equals(phone))) {
-                existing.setPhone(phone);
-                updated = true;
-            }
-            if (email != null && !email.isEmpty() && (existing.getEmail() == null || !existing.getEmail().equals(email))) {
-                existing.setEmail(email);
-                updated = true;
-            }
-            if (updated) {
-                return clientRepository.save(existing);
-            }
-            return existing;
+            boolean updated = updateClientFields(existing, phone, fullName, email);
+            return updated ? clientRepository.save(existing) : existing;
         }
 
-        // Если не найден по telegram_id, проверяем по phone
+        // Шаг 2: Поиск по номеру телефона (если по Telegram ID не нашли)
         Optional<Client> existingByPhone = clientRepository.findByPhone(phone);
         if (existingByPhone.isPresent()) {
             Client existing = existingByPhone.get();
-            // Обновляем данные, включая telegram_id
-            boolean updated = false;
-            if (telegramId != null && (existing.getTelegramId() == null || !existing.getTelegramId().equals(telegramId))) {
-                existing.setTelegramId(telegramId);
-                updated = true;
-            }
-            // ... аналогично обновляем fullName, email
-            if (updated) {
-                return clientRepository.save(existing);
-            }
-            return existing;
+            existing.setTelegramId(telegramId); // Привязываем Telegram к существующему телефону
+            updateClientFields(existing, null, fullName, email);
+            return clientRepository.save(existing);
         }
 
-        // Если не найден, создаём нового
+        // Шаг 3: Создание нового профиля
+        log.info("Регистрация нового клиента: phone={}, telegramId={}", phone, telegramId);
         Client newClient = Client.builder()
                 .telegramId(telegramId)
                 .phone(phone)
@@ -80,26 +60,44 @@ public class ClientService {
                 .email(email)
                 .build();
         return clientRepository.save(newClient);
-
     }
 
     /**
-     * Найти клиента по Telegram ID.
-     *
-     * @param telegramId ID Telegram пользователя
-     * @return Optional с клиентом, если найден
+     * Вспомогательный метод для обновления полей клиента (если они не заполнены или изменились).
+     */
+    private boolean updateClientFields(Client client, String phone, String fullName, String email) {
+        boolean updated = false;
+        if (fullName != null && !fullName.equals(client.getFullName())) {
+            client.setFullName(fullName);
+            updated = true;
+        }
+        if (phone != null && !phone.equals(client.getPhone())) {
+            client.setPhone(phone);
+            updated = true;
+        }
+        if (email != null && !email.equals(client.getEmail())) {
+            client.setEmail(email);
+            updated = true;
+        }
+        return updated;
+    }
+
+    /**
+     * Находит клиента по Telegram ID.
      */
     public Optional<Client> findByTelegramId(Long telegramId) {
         List<Client> clients = clientRepository.findByTelegramId(telegramId);
-        if (clients.isEmpty()) {
-            return Optional.empty();
-        }
+        if (clients.isEmpty()) return Optional.empty();
+
         if (clients.size() > 1) {
-            log.warn("Найдено {} клиентов для telegramId={}. Используется первый.", clients.size(), telegramId);
+            log.warn("Обнаружено дублирование профилей для telegramId={}", telegramId);
         }
-        return Optional.of(clients.getFirst());
+        return Optional.of(clients.get(0));
     }
 
+    /**
+     * Сохраняет последний активный филиал (slug), с которым взаимодействовал пользователь.
+     */
     public void saveOrUpdateLastUsedSlug(Long telegramId, String slug) {
         findByTelegramId(telegramId).ifPresentOrElse(
                 client -> {
